kubernetes/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dss-catedra-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dss-catedra
  template:
    metadata:
      labels:
        app: dss-catedra
    spec:
      containers:
        - name: dss-catedra
          image: yaeroo/dss-catedra:2.1
          ports:
            - containerPort: 80
