kubernetes/service.yml
apiVersion: v1
kind: Service
metadata:
  name: dss-catedra-service
spec:
  selector:
    app: dss-catedra
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: NodePort
