kubernetes/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dss-catedra-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: dss-catedra.test
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: dss-catedra-service
                port:
                  number: 80
